trunk/Archive2/72/9ed249668cc144/output
main.cpp:36:1: error: expected '}' at end of input
 }
 ^
main.cpp: In member function 'cop& cop::operator=(const cop&)':
main.cpp:16:30: error: a function-definition is not allowed here before '{' token
     cop & operator= (cop &&) {cout << "assign move" << endl;
                              ^
main.cpp:19:1: warning: no return statement in function returning non-void [-Wreturn-type]
 };
 ^
main.cpp: At global scope:
main.cpp:36:1: error: expected unqualified-id at end of input
 }
 ^
